# nift

./: README.md  deploy.sh  nift.sh  undeploy.sh
templates/C/: PROJECTNAME.c
templates/C++/: CMakeLists.txt  Doxyfile  Makefile  README.md
templates/C++/src/: main.cpp
templates/C++/tests/: CMakeLists.txt  test_example.cpp
templates/CUDA/: Makefile
templates/Languages/C/: Makefile  PROJECTNAME.h
templates/Languages/Go/: PROJECTNAME.go
templates/Rust/: PROJECTNAME.rs
templates/backend/Python - Django/PROJECTNAME/: asgi.py  settings.py  urls.py  wsgi.py
templates/default.c/: PROJECTNAME.c  PROJECTNAME.h
templates/frontend/React - (Next.js)/: package-lock.json  package.json
templates/languages/C++/: CMakeLists.txt
templates/languages/CUDA/: PROJECTNAME.cu
templates/languages/python-script/: README.md  setup.py
templates/python/: PROJECTNAME.py
templates/python-script/: PROJECTNAME.py
